[gd_scene load_steps=11 format=2]

[ext_resource path="res://boss/Boss.gd" type="Script" id=1]
[ext_resource path="res://boss/Hurtbox.gd" type="Script" id=2]
[ext_resource path="res://boss/full_gradient.tres" type="Gradient" id=3]
[ext_resource path="res://assets/sphere_soft.png" type="Texture" id=4]
[ext_resource path="res://boss/BaseSpawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://_projectiles/PlayerFollowProjectile.tscn" type="PackedScene" id=6]

[sub_resource type="GradientTexture" id=1]
gradient = ExtResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
angular_velocity = 4.62273e+30
orbit_velocity = 0.0
orbit_velocity_random = 1.0
scale = 0.01
color_ramp = SubResource( 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 40.0

[sub_resource type="CircleShape2D" id=4]
radius = 40.0

[node name="Boss" type="Node2D"]
script = ExtResource( 1 )

[node name="Body" type="KinematicBody2D" parent="."]
collision_layer = 4
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="Body"]
amount = 2000
draw_order = 1
process_material = SubResource( 2 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
visible = false
shape = SubResource( 3 )

[node name="Hurtbox" type="Area2D" parent="Body"]
visible = false
collision_layer = 5
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Hurtbox"]
shape = SubResource( 4 )

[node name="ProjectileSpawners" type="Node2D" parent="Body"]

[node name="BaseSpawner" parent="Body/ProjectileSpawners" instance=ExtResource( 5 )]
projectile = ExtResource( 6 )
speed = 100

[node name="SpecialAttacks" type="Node2D" parent="Body"]

[node name="Movement" type="Node2D" parent="Body"]

[node name="PlayerLineOfSight" type="RayCast2D" parent="Body"]
enabled = true

[node name="MoveTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 4.0
autostart = true

[node name="ProjectileTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
autostart = true

[node name="SpecialTimer" type="Timer" parent="."]
process_mode = 0
autostart = true
[connection signal="fire_projectile" from="." to="Body/ProjectileSpawners/BaseSpawner" method="fire"]
[connection signal="hit" from="Body" to="." method="hit"]
[connection signal="hit" from="Body/Hurtbox" to="." method="hit"]
[connection signal="timeout" from="MoveTimer" to="." method="_move"]
[connection signal="timeout" from="ProjectileTimer" to="." method="_fire"]
[connection signal="timeout" from="SpecialTimer" to="." method="_special"]
